<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Avatar AI Manager</string>
    <!-- Menu Buttons -->
    <string name="button_upload_database">Upload Database</string>
    <string name="button_refresh_database">Refresh Database</string>
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <!-- List Fragment Buttons -->
    <string name="button_add_feature">Add Feature</string>
    <string name="button_add_ar_anchor">Add Cloud Anchor</string>
    <string name="button_add_path">Add Path</string>
    <!-- Modification Buttons -->
    <string name="button_host">Host</string>
    <string name="button_summon_avatar">Summon Avatar</string>
    <string name="button_place_avatar">Place Avatar</string>
    <string name="button_add">Add</string>
    <string name="button_discard">Discard</string>
    <string name="button_amend">Amend</string>
    <string name="button_delete">Delete</string>
    <!--Database Upload-->
    <string name="title_upload_database">Upload Database</string>
    <string name="message_upload_database">The database will be uploaded to the server.</string>
    <string name="message_upload_success">Upload Success</string>
    <string name="message_upload_failure">Upload Failed</string>
    <!--Database Load-->
    <string name="message_loading" tools:ignore="TypographyEllipsis">Loading...\n</string>
    <string name="title_network_error">Network Error</string>
    <string name="message_network_error">Failed to download database. Please check your network connection and try again.</string>
    <!--Feature List Fragment-->
    <string name="title_feature_list">Features</string>
    <string name="header_feature_name">Name</string>
    <string name="header_feature_description">Description</string>
    <!--Anchor List Fragment-->
    <string name="title_anchor_list">Cloud Anchors</string>
    <string name="header_days_to_expiration">Days to Exp.</string>
    <string name="header_anchor_name">Name</string>
    <string name="header_anchor_path_number">Paths</string>
    <!--Path List Fragment-->
    <string name="title_paths_list">Paths</string>
    <string name="title_path_list">Origin: %s</string>
    <string name="header_path_destination">Destination</string>
    <string name="header_path_distance">Distance</string>
    <!-- Add/Edit Fields -->
    <string name="field_name">Name</string>
    <string name="field_select_anchor">Select Anchor</string>
    <string name="field_anchor">Anchor: %s</string>
    <string name="field_description">Description</string>
    <string name="field_primary_feature">Primary Feature</string>
    <string name="field_anchor_id">Anchor ID</string>
    <string name="field_origin">Origin</string>
    <string name="field_select_destination">Select Destination</string>
    <string name="field_destination">Destination: %s</string>
    <string name="field_distance">Distance</string>
    <!-- Add/Edit Common Messages -->
    <string name="message_changes_discarded">Changes Discarded</string>
    <string name="message_duplicate_error">Failed: %s already exists!</string>
    <!-- Add/Edit Feature Fragment -->
    <string name="title_new_feature">New Feature</string>
    <string name="title_edit_feature">Edit Feature</string>
    <string name="message_feature_added">Feature Added</string>
    <string name="message_feature_discarded">Feature Discarded</string>
    <string name="message_feature_updated">Feature Updated</string>
    <string name="message_feature_deleted">Feature Deleted</string>
    <string name="message_anchor_required">Anchor Selection Required</string>
    <!-- Add/Edit Anchor Fragment -->
    <string name="title_new_anchor">New Anchor</string>
    <string name="title_edit_anchor">Edit Anchor</string>
    <string name="message_anchor_added">Anchor Added</string>
    <string name="message_anchor_discarded">Anchor Discarded</string>
    <string name="message_anchor_updated">Anchor Updated</string>
    <string name="message_anchor_deleted">Anchor Deleted</string>
    <string name="message_cloud_anchor_upload_failed">Cloud Anchor Upload Failed</string>
    <string name="message_anchor_extension_failed">Unable To Extend Anchor Expiration</string>
    <string name="message_anchor_delete_failed">Unable To Delete Cloud Anchor</string>
    <string name="message_anchor_insertion_failed">Cloud Anchor Uploaded; Database Insertion Failed</string>
    <!--Add/Edit Path Fragment-->
    <string name="title_new_path">New Path</string>
    <string name="title_edit_path">Edit Path</string>
    <string name="message_path_added">Path Added</string>
    <string name="message_path_discarded">Path Discarded</string>
    <string name="message_path_updated">Path Updated</string>
    <string name="message_path_deleted">Path Deleted</string>
    <string name="message_destination_required">Destination Selection Required</string>
    <!--Anchor Selection Fragment-->
    <string name="title_select_anchor">Select Anchor</string>
</resources>